Atualização de arquivos das imagens

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <div class="menu__itens">
       <div class="menu__buttons">
         <div class="logo">
-          <img src="/images/logo.svg" alt="">
+          <img src="./images/logo.svg" alt="">
         </div>
         <button class="btn__close">
-          <img src="/images/icon-close.svg" alt="">
+          <img src="./images/icon-close.svg" alt="">
         </button>
       </div>
       
@@ -136,7 +136,7 @@
 
   <footer class="footer">
     <div class="footer__logo">
-      <img src="/images/logo.svg" alt="logo">
+      <img src="./images/logo.svg" alt="logo">
     </div>
     
     <ul>
@@ -163,10 +163,10 @@
     </ul>
 
     <div class="social">
-      <a href="#"><img src="/images/icon-facebook.svg" alt="Facebook"></a>
-      <a href="#"><img src="/images/icon-twitter.svg" alt="Twitter"></a>
-      <a href="#"><img src="/images/icon-pinterest.svg" alt="Pinterest"></a>
-      <a href="#"><img src="/images/icon-instagram.svg" alt="Instagram"></a>
+      <a href="#"><img src="./images/icon-facebook.svg" alt="Facebook"></a>
+      <a href="#"><img src="./images/icon-twitter.svg" alt="Twitter"></a>
+      <a href="#"><img src="./images/icon-pinterest.svg" alt="Pinterest"></a>
+      <a href="#"><img src="./images/icon-instagram.svg" alt="Instagram"></a>
     </div>
 
     <p>2021 Loopstudios. All rights reserved.</p>
